apps/base/weblate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weblate
  namespace: weblate
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/whitelist-source-range: "192.168.0.0/16"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - weblate.bacherik.de
    secretName: weblate-tls
  rules:
  - host: "weblate.bacherik.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weblate
            port:
              number: 80
